# allen-AI-inference

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: gui_main.cpp  main.cpp
include/: MyTenson.hpp
src/: MyTensor.cu
